--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16851,7 +16851,7 @@
 "~^/doc/1999-vanstuijvenberg\.pdf.*$" "/doc/iodine/1999-vanstuijvenberg.pdf";
 "~^/doc/personal/2011-1$" "/doc/personal/index";
 "~^/benter.*$" "//doc/statistics/decision/1994-benter.pdf";
-"~/writings$" "/index";
+"~^/writings$" "/index";
 "~^//about.*$" "/about";
 "~^/doc/statistics/decision/2022-boettiger.pdf%5C.*$" "/doc/statistics/decision/2022-boettiger.pdf";
 "~^/doc/ai/scaling/2012-bottou.pdf%5C.*$" "/doc/ai/scaling/2012-bottou.pdf";
@@ -16861,10 +16861,10 @@
 "~^/static/custom.yaml$" "/metadata/full.gtx";
 "~^/Ontological.*$" "/ontological-pantheism";
 "~^/haskell/.*Wikipedia-Link-Archive-Bot.*$" "/haskell/wikipedia-archive-bot";
-"~^/GPT-3Home.*$" "/gpt-3";
+"~^/GPT-3Ho.*$" "/gpt-3";
 "~^/google-alert\?utm.*$" "/google-alert";
 "~^/End-To-End$" "/doc/cs/end-to-end-principle/index";
-"~^/embryo-selectionEmbryo.*$" "/embryo-selection";
+"~^/embryo-selectionEmbr.*$" "/embryo-selection";
 "~^/doc/statistics/bayes/1994-fal$" "/doc/statistics/bayes/1994-falk";
 "~^/doc/sr/2019-04-22-deepdotweb-dnmlist.*$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
 "~^/doc/sociology/2021-%C3%83%.*$" "/doc/sociology/";
@@ -16887,6 +16887,173 @@
 "~^/[Bb]it-?creep.*$" "/holy-war#bitcreep";
 "~^/doc/ai/poetry/2019-05-24-gpt2-poetry-yeatssecondcoming$" "/doc/ai/poetry/2019-05-24-gpt2-poetry-yeatssecondcoming-500completions.txt";
 "~^/holy-war-.*$" "/holy-war";
+"~^/doc/psychology/neuroscience/2012-herculanohouzel.pdf%5C%5C.*$" "/doc/psychology/neuroscience/2012-herculanohouzel.pdf";
+"~^/catnip-inanchor$" "/catnip";
+"~^/.*/xmrlpc\.php.*$" "/static/404";
+"~^/existential-risk$" "/doc/existential-risk/index";
+"~^/doc/science/1955-moore-heartoffish.jpg$" "/static/404";
+"~^/doc/cs/algorithm/ai/adversarial/index$" "/doc/ai/adversarial/index";
+"~^/DNM-survival.*url-status.*$" "/dnm-survival";
+"~^/zeo/Vitamin-D\?.*$" "/zeo/vitamin-d";
+"~^/Terrorism-is-not-about-Terrorleast.*$" "/terrorism-is-not-about-terror";
+"~^/Terrorism-is-not-about-TerrorGassebner.*$" "/terrorism-is-not-about-terror";
+"~^/styles.css$" "/static/css/style-VERSIONED.css";
+"~^/doc/touhou/vocal-11$" "/doc/touhou/";
+"~^/doc/touhou/06.-%C3%89%C2%A6$" "/doc/touhou/";
+"~^/doc/personal/www.tumblr.com/tamerbadereldin/750444195858300928/unchain-your-websites-potential-the-ultimate$" "/static/404";
+"~^/doc/nicotine/1992-warburton$" "/doc/nicotine/1992-warburton.pdf";
+"~^/doc/nav_contactus.gif$" "/static/404";
+"~^/doc/music/music-distraction/2014-miller.pd%5Cf$" "/doc/music/music-distraction/2014-miller.pdf";
+"~^/podcasts/$" "/static/404";
+"~^/DNM-survival\.pdf.*$" "/dnm-survival";
+"~^/doc/2009-silberberg\.pdf.*$" "/doc/algernon/2009-silberberg.pdf";
+"~^/doc/biology/help.html$" "/doc/biology/2000-iapac-norvir/help.html";
+"~^/doc/biology/ina101b.html$" "/doc/biology/2000-iapac-norvir/ina101b.html";
+"~^/doc/nav_aboutIAPAC.gif$" "/doc/biology/2000-iapac-norvir/nav_aboutIAPAC.gif";
+"~^/doc/nav_advocacy.gif$" "/doc/biology/2000-iapac-norvir/nav_advocacy.gif";
+"~^/doc/nav_conferences.gif$" "/doc/biology/2000-iapac-norvir/nav_conferences.gif";
+"~^/doc/nav_education.gif$" "/doc/biology/2000-iapac-norvir/nav_education.gif";
+"~^/doc/nav_joinIAPAC.gif$" "/doc/biology/2000-iapac-norvir/nav_joinIAPAC.gif";
+"~^/doc/nav_links.gif$" "/doc/biology/2000-iapac-norvir/nav_links.gif";
+"~^/doc/nav_mainpage.gif$" "/doc/biology/2000-iapac-norvir/nav_mainpage.gif";
+"~^/doc/nav_publications.gif$" "/doc/biology/2000-iapac-norvir/nav_publications.gif";
+"~^/doc/nav_whatsnew.gif$" "/doc/biology/2000-iapac-norvir/nav_whatsnew.gif";
+"~^/portability/farthingport.html$" "/doc/biology/2000-iapac-norvir/portability/farthingport.html";
+"~^/doc/biology/regimens/stadtlanders.html$" "/doc/biology/2000-iapac-norvir/regimens/stadtlanders.html";
+"~^/doc/biology/regimens/tebas.html$" "/doc/biology/2000-iapac-norvir/regimens/tebas.html";
+"~^/doc/economics/advertising/2019-03-.*$" "/doc/economics/advertising/index";
+"~^/doc/1968-fierro-ben%C3%83-tez\.pdf.*$" "/doc/iodine/1968-fierrobenitez.pdf";
+"~^/doc/iq/2019-wai\.pdf.*$" "https://www.journalofexpertise.org/articles/volume2_issue4/JoE_2_4_Kell&Wai.pdf";
+"~^/doc/longevity/[013-9].*-decabo\.pdf.*$" "/doc/longevity/2019-decabo.pdf";
+"~^/doc/psychology/2006-02-05-853$" "/doc/psychology/2006-02-05-nytimes-thatwhichdoesnotkillmemakesmestranger.html";
+"~^/doc/rotten.com/liberty/index$" "/doc/rotten.com/library/index.html";
+"~^/doc/technology/2014-12-%C2%BF$" "/doc/technology/2014-12-14-gwern-linuxadjustmenthearingloss.html";
+"~^/fiction/jaguars.md$" "/fiction/jaguar.md";
+"~^/as$" "/static/404";
+"~^/mailto$" "/link#contact";
+"~^/.*/WiFi$" "/wifi";
+"~^/doc/personal/2013-gwern-personalityproject.html/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/personal/2012-gwern-personalityproject-2.html/favicon.ico$" "/static/img/favicon.ico";
+"~^/Terrorism-is-not-about-TerrorOther$" "/terrorism-is-not-about-terror";
+"~^/timing/$" "/timing";
+"~^/review/[Ll]ast-[Uu]nicorn.*$" "/review/the-last-unicorn";
+"~^/[Tt]he-[Ll]ast-[Uu]nicorn.*$" "/review/the-last-unicorn";
+"~^/[Ll]ast-[Uu]nicorn.*$" "/review/the-last-unicorn";
+"~^/review/The-Last-Unicorn.*$" "/review/the-last-unicorn";
+"~^/doc/reinforcement-learning/safe/1960-wiener.pdf%5C$" "/doc/reinforcement-learning/safe/1960-wiener.pdf";
+"~^/doc/statistics/probability/1964-goldm$" "/doc/statistics/probability/1964-goldman.pdf";
+"~^/doc/ai/poetry/2019-05-24-gpt2-poetry-yeatssecondcoming-mezMs5Aa$" "/doc/ai/poetry/2019-05-24-gpt2-poetry-yeatssecondcoming-500completions.txt";
+"~^/doc/borges/1977-borges-blindness.pdfvimeo.*$" "/doc/borges/1977-borges-blindness.pdf";
+"~^/static/js/script\?v=.*$" "/static/js/script.js";
+"~^/static/js/Hyphenopoly$" "/static/js/Hyphenopoly.js";
+"~^/static/js/head\?v=.*$" "/static/js/head.js";
+"~^/static/font/ssfp/sourceserifpro-basic-bold.ttf$" "/static/font/ssfp/SourceSerifPro-BASIC-Bold.ttf";
+"~^/Silk.*Road$" "/silk-road";
+"~^/newsletter/20123/index$" "/newsletter/2023/index";
+"~^/Hyperbolic-Time-Chamber\?.*$" "/hyperbolic-time-chamber";
+"~^/DNB-FAQ%21$" "/dnb-faq";
+"~^/doc/biology/about/abt_byrn.html$" "/doc/biology/2000-iapac-norvir/abt_byrn.html";
+"~^/doc/biology/about/abt_sun.html$" "/doc/biology/2000-iapac-norvir/abt_sun.html";
+"~^/doc/biology/about/adherence.html$" "/doc/biology/2000-iapac-norvir/adherence.html";
+"~^/doc/biology/ask.html$" "/doc/biology/2000-iapac-norvir/ask.html";
+"~^/doc/biology/about/ask.html$" "/doc/biology/2000-iapac-norvir/ask.html";
+"~^/doc/biology/consequences.html$" "/doc/biology/2000-iapac-norvir/consequences.html";
+"~^/doc/biology/description.html$" "/doc/biology/2000-iapac-norvir/description.html";
+"~^/doc/biology/about/description.html$" "/doc/biology/2000-iapac-norvir/description.html";
+"~^/doc/biology/faq.html$" "/doc/biology/2000-iapac-norvir/faq.html";
+"~^/doc/biology/about/faqcons.html$" "/doc/biology/2000-iapac-norvir/faqcons.html";
+"~^/doc/biology/farthing_sun.html$" "/doc/biology/2000-iapac-norvir/farthing_sun.html";
+"~^/doc/biology/about/help.html$" "/doc/biology/2000-iapac-norvir/help.html";
+"~^/doc/biology/about/ina100cw1.html$" "/doc/biology/2000-iapac-norvir/ina100cw1.html";
+"~^/doc/biology/about/ina101b.html$" "/doc/biology/2000-iapac-norvir/ina101b.html";
+"~^/doc/biology/about/ina102b.html$" "/doc/biology/2000-iapac-norvir/ina102b.html";
+"~^/doc/biology/about/ina103a.html$" "/doc/biology/2000-iapac-norvir/ina103a.html";
+"~^/doc/links.html$" "/doc/biology/2000-iapac-norvir/links.html";
+"~^/doc/biology/about/links.html$" "/doc/biology/2000-iapac-norvir/links.html";
+"~^/doc/biology/list.html$" "/doc/biology/2000-iapac-norvir/list.html";
+"~^/doc/biology/about/list.html$" "/doc/biology/2000-iapac-norvir/list.html";
+"~^/doc/biology/about/nav_advocacy.gif$" "/doc/biology/2000-iapac-norvir/nav_advocacy.gif";
+"~^/doc/biology/about/nav_links.gif$" "/doc/biology/2000-iapac-norvir/nav_links.gif";
+"~^/doc/biology/about/portability.html/doc/biology/about/otherreg.html$" "/doc/biology/2000-iapac-norvir/otherreg.html";
+"~^/doc/biology/physref.html$" "/doc/biology/2000-iapac-norvir/physref.html";
+"~^/doc/biology/portability.html$" "/doc/biology/2000-iapac-norvir/portability.html";
+"~^/doc/biology/portability/farthingport.html$" "/doc/biology/2000-iapac-norvir/portability/farthingport.html";
+"~^/doc/search.html$" "/doc/biology/2000-iapac-norvir/search.html";
+"~^/doc/biology/share.html$" "/doc/biology/2000-iapac-norvir/share.html";
+"~^/doc/biology/about/shoofs.html$" "/doc/biology/2000-iapac-norvir/shoofs.html";
+"~^/doc/biology/softgelnr.html$" "/doc/biology/2000-iapac-norvir/softgelnr.html";
+"~^/doc/biology/about/softgelnr.html$" "/doc/biology/2000-iapac-norvir/softgelnr.html";
+"~^/doc/biology/about/sub_bkgd.gif$" "/doc/biology/2000-iapac-norvir/sub_bkgd.gif";
+"~^/doc/biology/about/temperature.html$" "/doc/biology/2000-iapac-norvir/temperature.html";
+"~^/doc/biology/tolerability/abt_dintruff_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol1.html";
+"~^/doc/biology/tolerability/abt_dintruff_tol2.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol2.html";
+"~^/doc/biology/tolerability/abt_lichter_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_lichter_tol1.html";
+"~^/doc/biology/tolerability/hirschhorntips.html$" "/doc/biology/2000-iapac-norvir/tolerability/hirschhorntips.html";
+"~^/doc/biology/about/whatsnew.html$" "/doc/biology/2000-iapac-norvir/whatsnew.html";
+"~^/doc/aboutidx.html$" "/doc/biology/2000-iapac-norvir/index";
+"~^/7grounds.html$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/7grounds.html";
+"~^/dune-geneticst$" "/dune-genetics";
+"~^/newsletter/2018/14$" "/newsletter/2018/index";
+"~^/newsletter/2017/14$" "/newsletter/2017/index";
+"~^/newsletter/2016/14$" "/newsletter/2016/index";
+"~^/Screwfly.md$" "/screwfly.md";
+"~^/tartup-ideas$" "/startup-ideas";
+"~^/Terrorism-is-not-about-TerrorBoth$" "/terrorism-is-not-about-terror";
+"~^/changelog/feed$" "https://gwern.substack.com/feed";
+"~^/changelog/feeds$" "https://gwern.substack.com/feed";
+"~^/doc/biology/coinfidx.html$" "https://web.archive.org/web/20020223151806/http://iapac.org:80/confidx.html";
+"~^/static/template/include/templates.json$" "/static/template/include/index";
+"~^/search-results$" "/search";
+"~^/otaku-es-say$" "/otaku-essay";
+"~^/\*.*-Note-Anonymity$" "/death-note-anonymity";
+"~^/metadata/annotation/link-bibliography/\*$" "/metadata/annotation/link-bibliography/index";
+"~^/metadata/annotation/backlink/\*$" "/metadata/annotation/backlink/index";
+"~^/*.md.html$" "/index";
+"~^/Efficient-Attention$" "/note/attention";
+"~^/doc/traffic/2020-02-04-gwern.net-index.png$" "/doc/traffic/2020-02-04-gwern-gwernnet-index.png";
+"~^/doc/psychology/okcupid/samesexdataforracevsreplyrates$" "/doc/psychology/okcupid/samesexdataforracevsreplyrates.html";
+"~^/doc/psychology/7.*-orben\.pdf.*$" "/doc/psychology/2019-orben.pdf";
+"~^/doc/predictions/2001-armstrong-princi$" "/doc/statistics/prediction/2001-armstrong-principlesforecasting.pdf";
+"~^/doc/philosophy/ethics/Default.*$" "/doc/philosophy/ethics/index";
+"~^/doc/long-forai\.pdf.*$" "/static/404";
+"~^/doc/longevity/johan-bjorksten/%C3%82%C2%BF.*$" "/doc/longevity/johan-bjorksten/index";
+"~^/doc/cat/catnip/survey/2017-08-01-%C3%83%C2%B0$" "/doc/cat/psychology/drug/catnip/survey/2017-08-01-gs-reversed.csv";
+"~^/Danbooru2020\..*$" "/danbooru2020";
+"~^/Causation$" "/causality";
+"~^/Culture-is-no$" "/culture-is-not-about-esthetics";
+"~^/Culture-i$" "/culture-is-not-about-esthetics";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-24-gwern-dropcaps-darkmodedropcatsinvertedforlightmode-jaggies.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-24-gwern-dropcaps-darkmodedropcatsinvertedforlightmode-jaggies.jpg";
+"~^/doc/ai/2019-02-27$" "/doc/ai/nn/gan/stylegan/index";
+"~^/docs\(cat/psychology/2000-turner\.pdf.*$" "/doc/cat/psychology/2000-turner.pdf";
+"~^/doc/inde$" "/doc/index";
+"~^/doc/*/index$" "/doc/index";
+"~^/2toc.html$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/2toc.html";
+"~^/doc/philosophy/ethics/www/arxiv.org/0771b5c02b3db0da6665972d14be447484473982\.pdf.*$" "/doc/www/arxiv.org/0771b5c02b3db0da6665972d14be447484473982.pdf";
+"~^/doc/statistics/decision/www/arxiv.org/9e0ffaefd6959c9fb4c99a9db7b38e487bb76984\.pdf.*$" "/doc/www/arxiv.org/9e0ffaefd6959c9fb4c99a9db7b38e487bb76984.pdf";
+"~^/doc/reinforcement-learning/model/alphago/www/arxiv.org/aec55600cee51325078f7e9aadfe05cf0a4abac4\.pdf.*$" "/doc/www/arxiv.org/aec55600cee51325078f7e9aadfe05cf0a4abac4.pdf";
+"~^/doc/cs/algorithm/www/arxiv.org/d98aca3ad05161298313778238ac2d7542dfed7e\.pdf.*$" "/doc/www/arxiv.org/d98aca3ad05161298313778238ac2d7542dfed7e.pdf";
+"~^/doc/statistics/decision/www/arxiv.org/eaed0b5cccc1b5b12d1b05d0466cb237e43452ea\.pdf.*$" "/doc/www/arxiv.org/eaed0b5cccc1b5b12d1b05d0466cb237e43452ea.pdf";
+"~^/doc/cs/algorithm/www/codeblab.com/7e0975584bbca11012b0d405559f8d3a1522d0ee\.pdf.*$" "/doc/www/codeblab.com/7e0975584bbca11012b0d405559f8d3a1522d0ee.pdf";
+"~^/doc/darknet-market/silk-road/1/www/cryptome.org/a31dba89a4d172f47b8d321cf09e48904d4e845c\.pdf.*$" "/doc/www/cryptome.org/a31dba89a4d172f47b8d321cf09e48904d4e845c.pdf";
+"~^/doc/ai/anime/danbooru/www/www.engineeringletters.com/90f600c50293b59c73f9a08f677cf592386d3caa\.pdf.*$" "/doc/www/www.engineeringletters.com/90f600c50293b59c73f9a08f677cf592386d3caa.pdf";
+"~^/gPT-2$" "/gpt-2";
+"~^/Wikipedia-Archive-Bot$" "/haskell/wikipedia-rss-archive-bot";
+"~^/static/metadata/~\^/metadata/auto.gtx$" "/metadata/auto.gtx";
+"~^/modafinilpeak$" "/modafinil";
+"~^/NicotineIt$" "/nicotine";
+"~^/NootropicsAside$" "/nootropic/nootropic";
+"~^/lizardman$" "/note/lizardman-constant";
+"~^/prediction$" "/prediction-market";
+"~^/*.md$" "/indes";
+"~^/review/Darpa$" "/reviews/arpa";
+"~^/Scanner$" "/scanners";
+"~^/Self-decrypti$" "/self-decrypting-file";
+"~^/silk-road/2$" "/silk-road";
+"~^/silk-road-2$" "/silk-road";
+"~^/static/build/changeTag$" "/static/build/changeTag.hs";
+"~^/static/*.*.html$" "/static/html/index";
+"~^/static/popups$" "/static/popups.js";
+"~^/doc/japan/2001-debary-sourcesofjapanesetradition2\.pdf.*$" "https://libgen.rs/search.php?req=%22Sources+of+Japanese+Tradition%22&open=0&res=25&view=simple&phrase=1&column=def";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/2EF8E3DF.*$" "/static/404";
@@ -22804,16 +22971,13 @@
 "~^/siteadmin/.*$" "/static/404";
 "~^/site_name_com.*$" "/static/404";
 "~^/sito/.*$" "/static/404";
-"~^/static/.*$" "/static/404";
 "~^/studio/.*$" "/static/404";
 "~^/sysadm/.*$" "/static/404";
 "~^/systembc/.*$" "/static/404";
 "~^/textarea/.*$" "/static/404";
 "~^/Themes/.*$" "/static/404";
 "~^/UeController.*$" "/static/404";
-"~^/uedit1/.*$" "/static/404";
-"~^/uedit111/.*$" "/static/404";
-"~^/uedit2/.*$" "/static/404";
+"~^/uedit.*/.*$" "/static/404";
 "~^/UEditor.*$" "/static/404";
 "~^/UMditor/.*$" "/static/404";
 "~^/umeditor.*$" "/static/404";
@@ -22828,6 +22992,14 @@
 "~^//wp-json/.*$" "/static/404";
 "~^/yzmphp/.*$" "/static/404";
 "~^/.*ThinkPHP/.*$" "/static/404";
+"~^//wp-ver.*$" "/static/404";
+"~^//wp-atom.*$" "/static/404";
+"~^/\$NEXT.*$" "/static/404";
+"~^/\$Prev.*$" "/static/404";
+"~^/\$PREV.*$" "/static/404";
+"~^/uc_server.*$" "/static/404";
+"~^/.*/dist-newstyle/.*$" "/static/404";
+"~^/.*/\$escapedURL.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
