--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -17019,14 +17019,14 @@
 "~^/doc/longevity/johan-bjorksten/%C3%82%C2%BF.*$" "/doc/longevity/johan-bjorksten/index";
 "~^/doc/cat/catnip/survey/2017-08-01-%C3%83%C2%B0$" "/doc/cat/psychology/drug/catnip/survey/2017-08-01-gs-reversed.csv";
 "~^/Danbooru2020\..*$" "/danbooru2020";
-"~^/Causation$" "/causality";
-"~^/Culture-is-no$" "/culture-is-not-about-esthetics";
-"~^/Culture-i$" "/culture-is-not-about-esthetics";
+"~^/[Cc]ausation$" "/causality";
+"~^/[Cc]ulture-is-no$" "/culture-is-not-about-esthetics";
+"~^/[Cc]ulture-i$" "/culture-is-not-about-esthetics";
 "~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-24-gwern-dropcaps-darkmodedropcatsinvertedforlightmode-jaggies.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-24-gwern-dropcaps-darkmodedropcatsinvertedforlightmode-jaggies.jpg";
 "~^/doc/ai/2019-02-27$" "/doc/ai/nn/gan/stylegan/index";
 "~^/docs\(cat/psychology/2000-turner\.pdf.*$" "/doc/cat/psychology/2000-turner.pdf";
 "~^/doc/inde$" "/doc/index";
-"~^/doc/*/index$" "/doc/index";
+"~^/doc/\*/index$" "/doc/index";
 "~^/2toc.html$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/2toc.html";
 "~^/doc/philosophy/ethics/www/arxiv.org/0771b5c02b3db0da6665972d14be447484473982\.pdf.*$" "/doc/www/arxiv.org/0771b5c02b3db0da6665972d14be447484473982.pdf";
 "~^/doc/statistics/decision/www/arxiv.org/9e0ffaefd6959c9fb4c99a9db7b38e487bb76984\.pdf.*$" "/doc/www/arxiv.org/9e0ffaefd6959c9fb4c99a9db7b38e487bb76984.pdf";
@@ -17044,16 +17044,129 @@
 "~^/NootropicsAside$" "/nootropic/nootropic";
 "~^/lizardman$" "/note/lizardman-constant";
 "~^/prediction$" "/prediction-market";
-"~^/*.md$" "/indes";
+"~^/\*\.md$" "/index";
 "~^/review/Darpa$" "/reviews/arpa";
 "~^/Scanner$" "/scanners";
 "~^/Self-decrypti$" "/self-decrypting-file";
 "~^/silk-road/2$" "/silk-road";
 "~^/silk-road-2$" "/silk-road";
 "~^/static/build/changeTag$" "/static/build/changeTag.hs";
-"~^/static/*.*.html$" "/static/html/index";
 "~^/static/popups$" "/static/popups.js";
 "~^/doc/japan/2001-debary-sourcesofjapanesetradition2\.pdf.*$" "https://libgen.rs/search.php?req=%22Sources+of+Japanese+Tradition%22&open=0&res=25&view=simple&phrase=1&column=def";
+"~^/doc/statistics/decision/1999-joyce.pdf%5C.*$" "/doc/statistics/decision/1999-joyce.pdf";
+"~^/.*/fiction/Missing-Cities$" "/fiction/missing-cities";
+"~^/GPT-3Decision.*$" "/gpt-3";
+"~^/doc/psychiatry/-bipolaire/elon-musk/index$" "/doc/psychiatry/bipolair/elon-musk/index";
+"~^/doc/iq/2001-jensen$" "/doc/iq/2001-jensen.pdf";
+"~^/doc/algernon/2011-finlay\.pdf.*$" "/doc/algernon/2001-finlay.pdf";
+"~^/static/mathjax/$" "/static/mathjax/index";
+"~^/static/img/logo/logo-favicon-appletouch.png%5C$" "/static/img/logo/logo-favicon-appletouch.png";
+"~^/static/font/dropcap/dropcat/dark/G-4-small-1x.png$" "/static/font/dropcap/dropcat/dark/G-dark-4-small-1x.png";
+"~^/spaced-repeti\.\.\.*$" "/spaced-repetition";
+"~^/sideNotes/review/darkmode.js$" "/review/darkmode.js";
+"~^/NicotineNi.*$" "/nicotine";
+"~^/fiction/Cloud-Nine/index$" "/fiction/Cloud-Nine";
+"~^/.*/doc/technology/2005-shirky$" "/doc/technology/2005-shirky-agroupisitsownworstenemy.pdf";
+"~^/doc/statistics/decision/1960-howard-dynamicprogrammingmarkovprocesses.pdf.Hsu$" "/doc/statistics/decision/1960-howard-dynamicprogrammingmarkovprocesses.pdf";
+"~^/doc/statistics/decision/1960-howard-dynamicprogrammingmarkovprocesses$" "/doc/statistics/decision/1960-howard-dynamicprogrammingmarkovprocesses.pdf";
+"~^/doc/psychology/personality/psychopathy/2020-ok-\.pdf.*$" "/doc/psychology/personality/psychopathy/2020-ok.pdf";
+"~^/doc/psychology/3.*-orben\.pdf.*$" "/doc/psychology/2019-orben.pdf";
+"~^/doc/K5z.*$" "/doc/index";
+"~^/doc/economics/%C3%82.*$" "/doc/economics/index";
+"~^/doc/biology/1993-fraenkel$" "/doc/biology/1993-fraenkel.pdf";
+"~^/DNB-FA$" "/dnb-faq";
+"~^/MLp$" "/mlp";
+"~^/doc/subsubtitle_education_dismg.gif$" "/doc/biology/2000-iapac-norvir/subsubtitle_education_dismg.gif";
+"~^/doc/longevity/2482-decabo\.pdf.*$" "/doc/longevity/2019-decabo.pdf";
+"~^/doc/abstrusegoose-everydayiamaliveisamiracle.png$" "/doc/psychology/abstrusegoose-everydayiamaliveisamiracle.png";
+"~^/do-cs/psychology/2019-forsc-her\.pdf.*$" "/doc/psychology/cognitive-bias/2019-forscher.pdf";
+"~^/doc/psychology/nature/2010-peen.pd%5Cf$" "/doc/psychology/nature/2010-peen.pdf";
+"~^/doc/genetics/2017-latham\.pdf.*$" "/doc/psychology/personality/2017-latham.pdf";
+"~^/doc/radiance/index_split_033.html$" "/doc/radiance/index";
+"~^/doc/statistics/2010-vesterinen\.pdf.*$" "/doc/statistics/bias/animal/2010-vesterinen.pdf";
+"~^/doc/statistics/order/comparison/1978-elotheratingofchessplayerspastandpresent\.pdf.*$" "/doc/statistics/order/comparison/1978-elo-theratingofchessplayerspastandpresent.pdf";
+"~^/doc/reinforcement-learning/scaling/www/arxiv.org/0fff12b9a9e1e51c03c7b654c09f33aca477c248\.pdf.*$" "/doc/www/arxiv.org/0fff12b9a9e1e51c03c7b654c09f33aca477c248.pdf";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/5afaee6a74194b5e534df293f99a89d27552c960\.pdf.*$" "/doc/www/arxiv.org/5afaee6a74194b5e534df293f99a89d27552c960.pdf";
+"~^/doc/cs/algorithm/www/arxiv.org/d0d7e4ae561f25afdf77a9d1a9a069518cc50193\.pdf.*$" "/doc/www/arxiv.org/d0d7e4ae561f25afdf77a9d1a9a069518cc50193.pdf";
+"~^/Google-shutdown$" "/google-shutdowns";
+"~^/GPT-3AI$" "/gpt-3";
+"~^/conlangs$" "/language";
+"~^/newsletter/2022/14$" "/newsletter/2022/13";
+"~^/Simulation-inferences/$" "/simulation-inferences";
+"~^/spaced_repetition$" "/spaced-repetition";
+"~^/static/html/index$" "https://github.com/gwern/gwern.net/tree/master/template/";
+"~^//static/images/nopic.png.*$" "/static/404";
+"~^/stat$" "/static/";
+"~^/doc/www/s3-us-west-2.amazonaws.com/.*/favicon.ico.*$" "/static/img/favicon.ico";
+"~^/doc/economics/advertising/2022-fong.pd\\f$" "/doc/economics/advertising/2022-fong.pdf";
+"~^/doc/economics/2009-friedmanseasteadingapracticalguide\.pdf.*$" "/doc/economics/2009-friedman-seasteadingapracticalguide.pdf";
+"~^/spaced-rep$" "/spaced-repetition";
+"~^/sp$" "/spaced-repetition";
+"~^/spa$" "/spaced-repetition";
+"~^/spac$" "/spaced-repetition";
+"~^/spaced-r$" "/spaced-repetition";
+"~^/spaced-repetiti$" "/spaced-repetition";
+"~^/spaced-repetit$" "/spaced-repetition";
+"~^/spaced-repeti$" "/spaced-repetition";
+"~^/spaced-repet$" "/spaced-repetition";
+"~^/spaced-repe$" "/spaced-repetition";
+"~^/spaced-re$" "/spaced-repetition";
+"~^/Rubik.*$" "/rubiks-cube";
+"~^/[Rr]ubik$" "/rubiks-cube";
+"~^/[Rr]ubiks?-$" "/rubiks-cube";
+"~^/[Rr]ubik-cube$" "/rubiks-cube";
+"~^/[Rr]ubiks?$" "/rubiks-cube";
+"~^/newsletter/[0-9][0-9]?$" "/newsletter/index";
+"~^/doc/psychology/linguistics/2024-fedorenko.pdf_.*$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/economics/1688-delavega-confusionofconfusions.pdf\&.*" "/doc/economics/1688-delavega-confusionofconfusions.pdf";
+"~^/doc/psychology/linguistics/2024-fedorenko.pdf&.*$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/psychology/linguistics/2024-fedorenko.pdfC.*$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/self-experiments$" "/index#/self-experiments";
+"~^/GPT-3k8.*$" "/gpt-3";
+"~^/doc/xrisks/2012-schneier-liarsandoutliers$" "/doc/existential-risk/2012-schneier-liarsandoutliers-ch13.pdf";
+"~^/doc/technology/2020-ramesh.pdf&apos.*$" "/doc/technology/2020-ramesh.pdf";
+"~^/doc/statistics/decision/1972-savage$" "/doc/statistics/decision/1972-savage-foundationsofstatistics.pdf";
+"~^/doc/statistics/bias/1976-rosenthal$" "/doc/statistics/bias/1976-rosenthal-experimenterexpectancyeffects.pdf";
+"~^/doc/spacedrepetition/1989-gilmore-memoryag$" "/doc/psychology/spaced-repetition/1989-gilmore-memoryaginganddementia.pdf";
+"~^/doc/sociology/2021-arcidiacono.pdf\(.*$" "/doc/sociology/2021-arcidiacono.pdf";
+"~^/doc/psychology/linguistics/2024-fedorenko.pdfvia.*$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/psychology/linguistics/2024-fedorenko.pdf%F.*$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/psychology/linguistics/2024-fedorenko.pd%5Cf.*$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/psychology/linguistics/2024-fedodf$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/psychology/1952-asch.pdf.-.*$" "/doc/psychology/1952-asch.pdf";
+"~^/doc/clinmgt/avtherapies/patient/resistancebk.html$" "https://web.archive.org/web/20011224183749/http://iapac.org:80/clinmgt/avtherapies/patient/resistancebk.html";
+"~^/doc/cat/catnip/survey/2017-07-30-%EF%BF%BD$" "/doc/cat/psychology/drug/catnip/survey/2017-07-30-gs-pilot.csv";
+"~^/doc/cat/%C3%82%C2%BF.*$" "/doc/cat/index";
+"~^/doc/1988velleman.pdf/.*$" "/doc/philosophy/ethics/1988-velleman.pdf";
+"~^/Archiving-urls$" "/archiving";
+"~^/Wooden.*$" "/wooden-pillow";
+"~^/var$" "/variable";
+"~^/doc/ai/2021-jouppi$" "/doc/ai/scaling/hardware/2021-jouppi.pdf";
+"~^/doc/biology/tolerability/butcher.html$" "/doc/biology/2000-iapac-norvir/tolerability/butcher.html";
+"~^/doc/biology/tolerability/cohen.html$" "/doc/biology/2000-iapac-norvir/tolerability/cohen.html";
+"~^/doc/biology/tolerability/henry.html$" "/doc/biology/2000-iapac-norvir/tolerability/henry.html";
+"~^/doc/biology/urgnorvirnr.html$" "/doc/biology/2000-iapac-norvir/urgnorvirnr.html";
+"~^/doc/cat/1999-brhaw\.pdf.*$" "/doc/cat/genetics/1999-bradshaw.pdf";
+"~^/doc/2011-gooneratne\.pdf.*$" "/doc/melatonin/2011-gooneratne.pdf";
+"~^/doc/music/music-distraction/1989-mayfield.pdfstraction/1989-mayfield\.pdf.*$" "/doc/music/music-distraction/1989-mayfield.pdf";
+"~^/doc/psychology/2019-01-20-1$" "/doc/psychology/2019-01-20-gs-socks.csv";
+"~^/doc/psycho$" "/doc/psychology/index";
+"~^/.../psyc.../linguistics/2024-fedorenko\.pdf.*$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/FAces$" "/face";
+"~^/cloud-nine$" "/fiction/cloud-nine";
+"~^/pickard$" "/doc/darknet-market/william-pickard/index";
+"~^/Hi$" "/hn";
+"~^/Morning-wri$" "/morning-writing";
+"~^/morning$" "/morning-writing";
+"~^/neutropics$" "/nootropic/nootropic";
+"~^/plastinationnn$" "/plastination";
+"~^/Movie$" "/review/movies";
+"~^/Startup-ideamis$" "/startup-ideas";
+"~^/gwern.log$" "/index";
+"~^/static/generateDirectory.hs$" "/static/build/generateDirectory.hs";
+"~^/static/font/dropcap/gene-wolfe/light/V-51.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-18.svg";
+"~^/Sunk-cos$" "/sunk-cost";
+"~^/nenex/$" "/nenex";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/2EF8E3DF.*$" "/static/404";
@@ -17068,9 +17181,9 @@
 "~^.*data\:image\/jpeg\;base64.*$" "/static/404";
 "~^.*data\:image\/png\;base64.*$" "/static/404";
 "~^.*webviewprogressproxy/complete.*$" "/static/404";
-"~^/!2018.*$" "/static/404";
-"~^/!api/internal/connect/modules/%7B694e1b40-be41-466d-a948-36abd2172e6d%7D.*$" "/static/404";
-"~^/!wikipedia.*$" "/static/404";
+"~^/\!20[0-9][0-9].*$" "/static/404";
+"~^/\!api/internal/connect/modules/%7B694e1b40-be41-466d-a948-36abd2172e6d%7D.*$" "/static/404";
+"~^/\![Ww]ikipedia.*$" "/static/404";
 "~^/%21.php.*$" "/static/404";
 "~^/%21Wikiepdia.*$" "/static/404";
 "~^/%21Wikipdia$" "/static/404";
@@ -23000,6 +23113,12 @@
 "~^/uc_server.*$" "/static/404";
 "~^/.*/dist-newstyle/.*$" "/static/404";
 "~^/.*/\$escapedURL.*$" "/static/404";
+"~^/[Ll]ogon.tar.*$" "/static/404";
+"~^/fileman/.*$" "/static/404";
+"~^/[0-9]-[0-9]$" "/static/404";
+"~^/doc/personal/horoskopy.*$" "/static/404";
+"~^/zb_users/.*$" "/static/404";
+"~^/zb_system/.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
