--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -17168,6 +17168,93 @@
 "~^/Sunk-cos$" "/sunk-cost";
 "~^/nenex/$" "/nenex";
 
+"~^/doc/iq/ses/1957-shockley.pdf%5C.*$" "/doc/iq/ses/1957-shockley.pdf";
+"~^/doc/statistics/decision/2016-08-20-0$" "/doc/statistics/decision/2016-08-20-candyjapan-decisiontree-n9.csv";
+"~^/doc/lesswrong-survey/2013-07-22-182$" "/doc/lesswrong-survey/2013-07-22-sand-lwpoll.csv";
+"~^/doc/biology/about/website.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/about/website.html";
+"~^/doc/biology/about/board.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/about/board.html";
+"~^/doc/biology/about/advocacy2000.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/about/advocacy2000.html";
+"~^/doc/anime/eva/2003oshii-izubuchi$" "/doc/anime/eva/2003-oshii-izubuchi";
+"~^/doc/statistics/power/index$" "/doc/statistics/power-analysis/index";
+"~^/doc/statistics/bayes/%C3%83%E2%80%9A%C3.*$" "/doc/statistics/bayes/index";
+"~^/doc/spaced-repetition-forgetting-curves.png$" "/doc/psychology/spaced-repetition/gwern-forgetting-curves.png";
+"~^/doc/.*/In-Defense-Of-Inclusionism$" "/inclusionism";
+"~^/doc/psychology/linguisti$" "/doc/psychology/linguistics/index";
+"~^/doc/psychology/linguistics/53.*$" "/doc/psychology/linguistics/index";
+"~^/doc/psychology/linguistics/2024-f$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/psychology/linguistic$" "/doc/psychology/linguistics/index";
+"~^/doc/psychology/1968-welford-fundamentalsofskill.pdftakahas.*$" "/doc/psychology/1968-welford-fundamentalsofskill.pdf";
+"~^/DOC/IQ/1967-GUILFORD-THENATUREOFHUMANINTELLIGENCE\.pdf.*$" "/doc/iq/1967-guilford-thenatureofhumanintelligence.pdf";
+"~^/doc/.*/sicp/Chapter-1.2$" "/sicp/chapter-1.2";
+"~^/doc/genetics/selection/www.mountimprobable.com/about/s.generateHref$" "/doc/genetics/selection/www.mountimprobable.com/about/index";
+"~^/doc/dualnback/2009jaeggi\.pdf.*$" "/doc/dual-n-back/2009-jaeggi.pdf";
+"~^/doc/design/typography/1954-chaundy-theprintingofmathematics$" "/doc/design/typography/1954-chaundy-theprintingofmathematics.pdf";
+"~^/doc/borges/1947-borges-anewrefu$" "/doc/borges/1947-borges-anewrefutationoftime.pdf";
+"~^/doc/biology/forms/emaillist.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/forms/emaillist.html";
+"~^/doc/biology/about/conferences.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/about/conferences.html";
+"~^/doc/anime/eva/Max.*$" "/doc/anime/eva/index";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs\?.*$" "/doc/anime/eva/2002-takeda-notenkimemoirs";
+"~^/doc/2017-01-13-cat-rstansegfault.jpg$" "/doc/cs/2017-01-13-gwern-cat-rstansegfault.jpg";
+"~^/doc/1985-hofstadte......-lottery$" "/doc/existential-risk/1985-hofstadter#dilemmas-for-superrational-thinkers-leading-up-to-a-luring-lottery";
+"~^/Danbooru2021\?from.*1$" "/dabooru2021";
+"~^/Changelogy$" "/changelog";
+"~^/doc/biology/about/what.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/about/what.html";
+"~^/doc/biology/about/staff.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/about/staff.html";
+"~^/doc/iq/1971-cattell$" "/doc/iq/1987-cattell.pdf";
+"~^/doc/2013-teixeira\.pdf.*$" "/doc/melatonin/2013-teixeira.pdf";
+"~^/newslettee$" "/doc/newsletter/index";
+"~^/doc/2011-gwern-yourmorals.or$" "/doc/personal/2011-gwern-yourmorals.org/";
+"~^/doc/psychology/1988-cleckley-maskofsanity\.pdf.*$" "/doc/psychiatry/1941-cleckley-maskofsanity.pdf";
+"~^/doc/psychology/2019-letexter\.pdf.*$" "/doc/psychology/2019-letexier.pdf";
+"~^/doc/psychology/2019-letex$" "/doc/psychology/2019-letexier.pdf";
+"~^/doc/psychology/linguistics/2024-fe$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/psychology/linguistics/2024-fedor$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/psychology/linguistics/2024-fedorenko$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/psychology/linguistics/2024-fedorenk$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/psychology/linguistics/2024-fedoren$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/psychology/linguistics/2024-fedore$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/psychology/linguistics/2024-fedo$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/psychology/linguistics/2024-fed$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/sociology/1962-calhoun.pdfI$" "/doc/sociology/1962-calhoun.pdf";
+"~^/doc/armawiki.*/2005-shirky-agroupisitsownworstenemy\.pdf.*$" "/doc/technology/2005-shirky-agroupisitsownworstenemy.pdf";
+"~^/Wikipedia-and$" "/wikipedia-and-knol";
+"~^/doc/ai/nn/transformer/gpt/www/ai.stanford.edu/bdf17c80e1ed5dc516811f03acef03415b220143.html$" "/doc/www/ai.stanford.edu/bdf17c80e1ed5dc516811f03acef03415b220143.html";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/816419a9f3061b31c37335aa0c07da5a8256a5a4\.pdf.*$" "/doc/www/arxiv.org/816419a9f3061b31c37335aa0c07da5a8256a5a4.pdf";
+"~^/doc/cs/algorithm/www/arxiv.org/d621333eb39a006e7285b7bef13953dd42901538\.pdf.*$" "/doc/www/arxiv.org/d621333eb39a006e7285b7bef13953dd42901538.pdf";
+"~^/doc/genetics/microbiome/www/journals.asm.org/db6998e9b0fb81fe6dcb79f00b3d76aed1826f4c.html$" "/doc/www/journals.asm.org/db6998e9b0fb81fe6dcb79f00b3d76aed1826f4c.html";
+"~^/doc/ai/nn/transformer/gpt/www/old.reddit.com/e4720e5d01ba14d0e9b13bb2c42a6d37923c65df.html$" "/doc/www/old.reddit.com/e4720e5d01ba14d0e9b13bb2c42a6d37923c65df.html";
+"~^/doc/statistics/decision/www/openreview.net/73bd644d2ad32df7a05b6a24cb185f5812ff3a0e\.pdf.*$" "/doc/www/openreview.net/73bd644d2ad32df7a05b6a24cb185f5812ff3a0e.pdf";
+"~^/doc/nootropic/caffeine/www/repository.uel.ac.uk/b37c20f2db48b477178e43b04a1f3812f8877dbf\.pdf.*$" "/doc/www/repository.uel.ac.uk/b37c20f2db48b477178e43b04a1f3812f8877dbf.pdf";
+"~^/doc/ai/nn/diffusion/www/saltacc.notion.site/c330d033ddf7a3df965e9faf3620ea613021342b.html$" "/doc/www/saltacc.notion.site/c330d033ddf7a3df965e9faf3620ea613021342b.html";
+"~^/doc/cs/security/www/www-users.cse.umn.edu/a8d04cf2a6147f480e2af6a345b26776e53c8e12\.pdf.*$" "/doc/www/www-users.cse.umn.edu/a8d04cf2a6147f480e2af6a345b26776e53c8e12.pdf";
+"~^/doc/darknet-market/silk-road/1/www/www.bbc.co.uk/ab778d469fe542379e9eb47562110921349c2a22.html$" "/doc/www/www.bbc.co.uk/ab778d469fe542379e9eb47562110921349c2a22.html";
+"~^/doc/ai/nn/transformer/gpt/www/www.buildt.ai/9b29d4901843b64346538b8f7e433bee619a3f06.html$" "/doc/www/www.buildt.ai/9b29d4901843b64346538b8f7e433bee619a3f06.html";
+"~^/doc/darknet-market/silk-road/1/www/www.fox6now.com/a0dc08a893d4bf21d54a12aeca124b3f08931b34.html$" "/doc/www/www.fox6now.com/a0dc08a893d4bf21d54a12aeca124b3f08931b34.html";
+"~^/doc/darknet-market/silk-road/1/www/www.justice.gov/0733e7c333864efb4e58c28e363dfa456c1d18f6.html$" "/doc/www/www.justice.gov/0733e7c333864efb4e58c28e363dfa456c1d18f6.html";
+"~^/doc/ai/nn/www/www.science.org/067576a16e80a80aa66fb00004b450a3fec4e84d.html$" "/doc/www/www.science.org/067576a16e80a80aa66fb00004b450a3fec4e84d.html";
+"~^/doc/darknet-market/silk-road/1/www/www.theage.com.au/705bdd1432e3ec9eee207dcebc08365ce1fd9c01.html$" "/doc/www/www.theage.com.au/705bdd1432e3ec9eee207dcebc08365ce1fd9c01.html";
+"~^/drug-heuristic/$" "/drug-heuristic";
+"~^/GPT3-notification$" "/gpt-3-nonfiction";
+"~^/nootropic/Magnesium$" "/nootropics/magnesium";
+"~^/not$" "/note/notes";
+"~^/Notes/$" "/note/notes";
+"~^/Slowing-Moores-La$" "/slowing-moores-law";
+"~^/static/font/NotoEmoji-Bold-SUBSETTED.ttf$" "/static/font/noto-emoji/NotoEmoji-Bold-SUBSETTED.ttf";
+"~^/doc/personal/2011-gwern-yourmorals.org/justice_process.html/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/bitcoin/extracts-annotations.js$" "/static/js/extracts-annotations.js";
+"~^/doc/bitcoin/extracts.js$" "/static/js/extracts.js";
+"~^/teorema.*$" "/static/404";
+"~^/IN.Fhiky.*$" "/static/404";
+"~^/doc/touhou/efs.*$" "/doc/touhou";
+"~^/doc/spacedrepetition/1989-gilmore-memoryaginganddeme$" "/doc/psychology/spaced-repetition/1989-gilmore-memoryaginganddementia.pdf";
+"~^/doc/sociology/1980-patton-quali$" "/doc/sociology/1980-patton-qualitativeevaluationmethods.pdf";
+"~^/doc/rotten.com/library/black-sheep/$" "/doc/rotten.com/library/bio/black-sheep/index.html";
+"~^/doc/psychology/9225-asch\.pdf.*$" "/doc/psychology/personality/1946-asch.pdf";
+"~^/doc/k5.*$" "/doc/index";
+"~^/twdne/.*$" "/twdne";
+"~^/doc/melatonin/2016-boergers\.pdf.*$" "/doc/melatonin/2014-boergers.pdf";
+"~^/wiki.wardepartmentpapers.org.*$" "/static/404";
+
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/2EF8E3DF.*$" "/static/404";
 "~^/.*mailto:.*$" "/static/404";
