--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11441,3 +11441,14 @@ default "";
 "~^/doc/ai/scaling/emergence/grokking/2024-huang-figure1-phasediagramofregimesforgrokking.png.*$" "/doc/ai/scaling/emergence/grokking/2024-huang-figure1-phasediagramofregimesforgrokking.jpg";
 "~^/doc/ai/scaling/emergence/grokking/2024-wang-figure4-grokkingphasetransitionofcompositionalcircuitintransformer.png.*$" "/doc/ai/scaling/emergence/grokking/2024-wang-figure4-grokkingphasetransitionofcompositionalcircuitintransformer.jpg";
 "~^/doc/design/typography/1982-hofstader.pdf.*$" "/doc/design/typography/1982-hofstadter.pdf";
+"~^/doc/math/1982-hofstadter.pdf.*$" "/doc/math/1982-hofstadter-2.pdf";
+"~^/doc/nootropic/1966-avioli.pdf.*$" "/doc/nootropic/magnesium/1966-avioli.pdf";
+"~^/doc/nootropic/2013-2014-gwern-magnesium-rawdata.png.*$" "/doc/nootropic/magnesium/2013-2014-gwern-magnesium-rawdata.png";
+"~^/doc/nootropic/2013-2014-gwern-magnesium-smoothed.jpg.*$" "/doc/nootropic/magnesium/2013-2014-gwern-magnesium-smoothed.jpg";
+"~^/doc/nootropic/2016-gwern-magnesium-cumulativedoses-marginaleffects-combinedmodel.jpg.*$" "/doc/nootropic/magnesium/2016-gwern-magnesium-cumulativedoses-marginaleffects-combinedmodel.jpg";
+"~^/doc/nootropic/2016-gwern-magnesium-cumulativedoses-marginaleffects.jpg.*$" "/doc/nootropic/magnesium/2016-gwern-magnesium-cumulativedoses-marginaleffects.jpg";
+"~^/doc/nootropic/2016-gwern-magnesium-estimatedcumulativedoses.jpg.*$" "/doc/nootropic/magnesium/2016-gwern-magnesium-estimatedcumulativedoses.jpg";
+"~^/doc/nootropic/2016-gwern-magnesium-overall.jpg.*$" "/doc/nootropic/magnesium/2016-gwern-magnesium-overall.jpg";
+"~^/doc/ai/scaling/emergence/grokking/2022-liu-figure1o-grokkinggeneralizationtimeimproveswithhigherweightdecay.png.*$" "/doc/ai/scaling/emergence/grokking/2022-liu-figure10-grokkinggeneralizationtimeimproveswithhigherweightdecay.png";
+"~^/doc/reinforcement-learning/exploration/active-learning/data-pruning/2024-lin-figure1-rho1lossacceleratestrainingofllmswhilereducingdatause.png.*$" "/doc/reinforcement-learning/exploration/active-learning/data-pruning/2024-lin-figure1-rho1lossacceleratestrainingofllmswhilereducingdatause.jpg";
+"~^/doc/ai/scaling/emergence/grokking/2024-fan-figure2-grokkingincreaseswithmlpdepth.png.*$" "/doc/ai/scaling/emergence/grokking/2024-fan-figure2-grokkingincreaseswithmlpdepth.jpg";
